# sollama

./: .gitignore  Cargo.toml  _response.html  google_response.html  readme.md
src/: config.rs  lib.rs  llm.rs  main.rs  prompt.rs  scraper.rs  search.rs  types.rs
tests/: integration_test.rs
