[package]
name = "sollama"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "gzip"] }
tokio = { version = "1.41.0", features = ["full"] }
scraper = "0.21.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.92"
urlencoding = "2.1.3"
futures = "0.3.31"
thiserror = "1.0.68"
config = "0.14.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features = ["serde"] }
indicatif = "0.17.8"


[dev-dependencies]
mockito = "1.5.0"

[profile.release]
opt-level = 3
lto = true